--- a/config/oracle_jre.yml
+++ b/config/oracle_jre.yml
@@ -20,8 +20,8 @@
 # e.g.  repository_root: "https://example.com/oracle-jre/{platform}/{architecture}"
 ---
 jre:
-  version: 1.8.0_+
-  repository_root: ""
+  version: 1.8.0_221
+  repository_root: http://oracle-jdk.r3.app.cloud.comcast.net/jre-8u221-linux-x64.tar.gz
 jvmkill_agent:
   version: 1.+
   repository_root: "{default.repository.root}/jvmkill/{platform}/{architecture}"
