--- a/config/oracle_jre.yml
+++ b/config/oracle_jre.yml
@@ -21,7 +21,7 @@
 ---
 jre:
   version: 1.8.0_221
-  repository_root: http://oracle-jdk.r3.app.cloud.comcast.net/jre-8u221-linux-x64.tar.gz
+  repository_root: http://oracle-jdk.r3.app.cloud.comcast.net/
 jvmkill_agent:
   version: 1.+
   repository_root: "{default.repository.root}/jvmkill/{platform}/{architecture}"
